--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-leaflet": "^2.7.0",
+    "react-leaflet-coordinates": "^1.0.1",
+    "react-leaflet-search": "^1.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "reactstrap": "^8.5.0"
