--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.5.0",
     "firebase": "^7.15.1",
     "leaflet": "^1.6.0",
+    "leaflet-geosearch": "^3.0.6",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
